--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import './icons.css';
 @import './fonts.css';
+@import './link.css';
+@import './body.css';
+@import './button-icon.css';
+
 :root {
     font-size: 16px;
     --primary: #00B050;
@@ -20,7 +24,3 @@
 
 }
 
-body {
-    background-color: var(--primary);
-    font-family: var(--basefontFamily);
-}
