--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 @import './link.css';
 @import './body.css';
 @import './button-icon.css';
-@import './logo.css';
+@import './sidebar.css';
 
 :root {
     font-size: 16px;
