--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import './body.css';
 @import './button-icon.css';
 @import './sidebar.css';
+@import './ellipsis.css';
 
 :root {
     font-size: 16px;
