--- a/css/player.css
+++ b/css/player.css
@@ -1,4 +1,19 @@
+@import './slider.css';
+@import './player-controls.css';
+@import './player-playback.css';
+@import './player-volume.css';
+@import './now-playing.css';
+
 .player {
+    display: flex;
+    gap: 1.5rem;
+    padding: 1rem;
+    margin-block-start: 5rem;
+    box-shadow: inset 0 1px 0 var(--gray30);
+}
+
+.player > * {
+    flex: 1;
 
 }
 
@@ -7,6 +22,17 @@
     padding: .5rem;
     background:none;
     color: var(--gray10);
-    font-size: 1.5rem;
+    font-size: 1rem;
     cursor: pointer;
+}
+
+.player-playerVolume {
+    display: flex;
+
+}
+
+.playerVolume {
+    display: flex;
+    justify-content: end;
+    flex: 1;
 }
