Contenedor principal de los playlist

--- a/css/playlist-b.css
+++ b/css/playlist-b.css
@@ -6,6 +6,7 @@
     overflow: hidden;
     background: rgba(255,255,255,.1);
     transition: .3s background;
+    flex-shrink: 0; /*siguiendo el ancho que nunca se haga mas pequeño*/ 
 }
 
 .playlistB:hover, .playlistB:focus-within {
