--- a/css/playlist-list.css
+++ b/css/playlist-list.css
@@ -1,11 +1,15 @@
 .playlistList {
-    border: 1px solid red;
+   
 }
 
 .playlistList-top {
     padding-block-end: .5rem;
     padding-block-start: .5rem;
     margin-block-end: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
 }
 .playlistList-title {
     font: var(--headline2);
