--- a/css/layout.css
+++ b/css/layout.css
@@ -6,11 +6,29 @@
 }
 
 .layout {
-    box-shadow: inset 0 0 0 10px red ;
+  
     min-inline-size: var(--minInlinesize);
   
 }
 
+.layout-sidebar {
+    inline-size: var(--sidebarInlineSize);
+    block-size: calc(100vh - var(--bottomSize));
+    min-block-size: var(--minBlockSize);
+    overflow: auto;
+    flex-shrink: 0;
+}
+
+.layout-main {
+    block-size: calc(100vh - var(--bottomSize));
+    min-block-size: var(--minBlockSize);
+    overflow: auto;
+}
+
+.layout-bottom {
+    flex: 1;
+    block-size: var(--bottomSize);
+}
 .layout-block {
     display: flex;
 }
