--- a/css/layout.css
+++ b/css/layout.css
@@ -17,6 +17,7 @@
     min-block-size: var(--minBlockSize);
     overflow: auto;
     flex-shrink: 0;
+    background: var(--gray60);
 }
 
 .layout-main {
