--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,8 @@
 @import './ellipsis.css';
 @import './player.css';
 @import './layout.css';
-
-
 @import './page.css';
+@import './scrollbar.css';
 
 :root {
     font-size: 16px;
